[CELEBORN-2014] updateInterruptionNotice REST API
