# openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -193,6 +193,27 @@ paths:
               schema:
                 $ref: '#/components/schemas/HandleResponse'
 
+
+  /api/v1/workers/updateInterruptionNotice:
+    put:
+      tags:
+        - Worker
+      operationId: updateInterruptionNotice
+      description: Update the master with worker disruption info to be used during slot allocation.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateInterruptionNoticeRequest'
+      responses:
+        "200":
+          description: The request was successful.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HandleResponse'
+
+
   /api/v1/workers/events:
     get:
       tags:
@@ -1019,6 +1040,21 @@ components:
         - fetchPort
         - replicatePort
 
+
+    WorkerInterruptionNotice:
+      type: object
+      properties:
+        host:
+          type: string
+          description: The host of the worker.
+        interruptionTimestamp:
+          type: integer
+          format: int64
+          description: The datetime of the expected interruption.
+      required:
+        - host
+        - interruptionTimestamp
+
     ExcludeWorkerRequest:
       type: object
       properties:
@@ -1041,6 +1077,15 @@ components:
           description: The workers to be removed from the master workers unavailable info.
           items:
             $ref: '#/components/schemas/WorkerId'
+
+    UpdateInterruptionNoticeRequest:
+      type: object
+      properties:
+        workers:
+          type: array
+          description: The workers to be removed from the master workers unavailable info.
+          items:
+            $ref: '#/components/schemas/WorkerInterruptionNotice'
 
     SendWorkerEventRequest:
       type: object
